--- a/Notebooks/jupyter.ipynb
+++ b/Notebooks/jupyter.ipynb
@@ -4660,7 +4660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4689,17 +4689,9 @@
     "    plt.ylabel(\"value\")\n",
     "\n",
     "    # Plot non outliers in default color\n",
-    "    ax.plot(\n",
-    "        dataset.index[~dataset[outlier_col]],\n",
-    "        dataset[col][~dataset[outlier_col]],\n",
-    "        \"+\",\n",
-    "    )\n",
+    "    ax.plot(dataset.index[~dataset[outlier_col]], dataset[col][~dataset[outlier_col]], \"+\",)\n",
     "    # Plot data points that are outliers in red\n",
-    "    ax.plot(\n",
-    "        dataset.index[dataset[outlier_col]],\n",
-    "        dataset[col][dataset[outlier_col]],\n",
-    "        \"r+\",\n",
-    "    )\n",
+    "    ax.plot(dataset.index[dataset[outlier_col]], dataset[col][dataset[outlier_col]],\"r+\",)\n",
     "\n",
     "    plt.legend(\n",
     "        [\"outlier \" + col, \"no outlier \" + col],\n",
@@ -4710,6 +4702,322 @@
     "    )\n",
     "    plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mark_outliers_iqr(dataset, col):\n",
+    "    \"\"\"Function to mark values as outliers using the IQR method.\n",
+    "\n",
+    "    Args:\n",
+    "        dataset (pd.DataFrame): The dataset\n",
+    "        col (string): The column you want apply outlier detection to\n",
+    "\n",
+    "    Returns:\n",
+    "        pd.DataFrame: The original dataframe with an extra boolean column \n",
+    "        indicating whether the value is an outlier or not.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    dataset = dataset.copy()\n",
+    "\n",
+    "    Q1 = dataset[col].quantile(0.25)\n",
+    "    Q3 = dataset[col].quantile(0.75)\n",
+    "    IQR = Q3 - Q1\n",
+    "\n",
+    "    lower_bound = Q1 - 1.5 * IQR\n",
+    "    upper_bound = Q3 + 1.5 * IQR\n",
+    "\n",
+    "    dataset[col + \"_outlier\"] = (dataset[col] < lower_bound) | (\n",
+    "        dataset[col] > upper_bound\n",
+    "    )\n",
+    "\n",
+    "    return dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = pd.DataFrame()\n",
+    "for col in outlier_cols:\n",
+    "    dataset = mark_outliers_iqr(df, col)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "col = 'acc_x'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>acc_x</th>\n",
+       "      <th>acc_y</th>\n",
+       "      <th>acc_z</th>\n",
+       "      <th>gyro_x</th>\n",
+       "      <th>gyro_y</th>\n",
+       "      <th>gyro_z</th>\n",
+       "      <th>Participant</th>\n",
+       "      <th>label</th>\n",
+       "      <th>category</th>\n",
+       "      <th>set</th>\n",
+       "      <th>gyro_z_outlier</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>epoch (ms)</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2019-01-11 15:08:05.200</th>\n",
+       "      <td>0.013500</td>\n",
+       "      <td>0.977000</td>\n",
+       "      <td>-0.071000</td>\n",
+       "      <td>-1.8904</td>\n",
+       "      <td>2.4392</td>\n",
+       "      <td>0.9388</td>\n",
+       "      <td>B</td>\n",
+       "      <td>bench</td>\n",
+       "      <td>heavy</td>\n",
+       "      <td>30</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-11 15:08:05.400</th>\n",
+       "      <td>-0.001500</td>\n",
+       "      <td>0.970500</td>\n",
+       "      <td>-0.079500</td>\n",
+       "      <td>-1.6826</td>\n",
+       "      <td>-0.8904</td>\n",
+       "      <td>2.1708</td>\n",
+       "      <td>B</td>\n",
+       "      <td>bench</td>\n",
+       "      <td>heavy</td>\n",
+       "      <td>30</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-11 15:08:05.600</th>\n",
+       "      <td>0.001333</td>\n",
+       "      <td>0.971667</td>\n",
+       "      <td>-0.064333</td>\n",
+       "      <td>2.5608</td>\n",
+       "      <td>-0.2560</td>\n",
+       "      <td>-1.4146</td>\n",
+       "      <td>B</td>\n",
+       "      <td>bench</td>\n",
+       "      <td>heavy</td>\n",
+       "      <td>30</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-11 15:08:05.800</th>\n",
+       "      <td>-0.024000</td>\n",
+       "      <td>0.957000</td>\n",
+       "      <td>-0.073500</td>\n",
+       "      <td>8.0610</td>\n",
+       "      <td>-4.5244</td>\n",
+       "      <td>-2.0730</td>\n",
+       "      <td>B</td>\n",
+       "      <td>bench</td>\n",
+       "      <td>heavy</td>\n",
+       "      <td>30</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-11 15:08:06.000</th>\n",
+       "      <td>-0.028000</td>\n",
+       "      <td>0.957667</td>\n",
+       "      <td>-0.115000</td>\n",
+       "      <td>2.4390</td>\n",
+       "      <td>-1.5486</td>\n",
+       "      <td>-3.6098</td>\n",
+       "      <td>B</td>\n",
+       "      <td>bench</td>\n",
+       "      <td>heavy</td>\n",
+       "      <td>30</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-20 17:33:27.000</th>\n",
+       "      <td>-0.048000</td>\n",
+       "      <td>-1.041500</td>\n",
+       "      <td>-0.076500</td>\n",
+       "      <td>1.4146</td>\n",
+       "      <td>-5.6218</td>\n",
+       "      <td>0.2926</td>\n",
+       "      <td>E</td>\n",
+       "      <td>row</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>90</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-20 17:33:27.200</th>\n",
+       "      <td>-0.037000</td>\n",
+       "      <td>-1.030333</td>\n",
+       "      <td>-0.053333</td>\n",
+       "      <td>-2.7684</td>\n",
+       "      <td>-0.5854</td>\n",
+       "      <td>2.2440</td>\n",
+       "      <td>E</td>\n",
+       "      <td>row</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>90</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-20 17:33:27.400</th>\n",
+       "      <td>-0.060000</td>\n",
+       "      <td>-1.031000</td>\n",
+       "      <td>-0.082000</td>\n",
+       "      <td>2.8416</td>\n",
+       "      <td>-5.1342</td>\n",
+       "      <td>-0.1220</td>\n",
+       "      <td>E</td>\n",
+       "      <td>row</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>90</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-20 17:33:27.600</th>\n",
+       "      <td>-0.038667</td>\n",
+       "      <td>-1.025667</td>\n",
+       "      <td>-0.044667</td>\n",
+       "      <td>-0.2318</td>\n",
+       "      <td>0.2562</td>\n",
+       "      <td>1.1220</td>\n",
+       "      <td>E</td>\n",
+       "      <td>row</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>90</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-20 17:33:27.800</th>\n",
+       "      <td>-0.044000</td>\n",
+       "      <td>-1.034000</td>\n",
+       "      <td>-0.059000</td>\n",
+       "      <td>1.0980</td>\n",
+       "      <td>-4.0240</td>\n",
+       "      <td>0.9760</td>\n",
+       "      <td>E</td>\n",
+       "      <td>row</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>90</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9009 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            acc_x     acc_y     acc_z  gyro_x  gyro_y  gyro_z  \\\n",
+       "epoch (ms)                                                                      \n",
+       "2019-01-11 15:08:05.200  0.013500  0.977000 -0.071000 -1.8904  2.4392  0.9388   \n",
+       "2019-01-11 15:08:05.400 -0.001500  0.970500 -0.079500 -1.6826 -0.8904  2.1708   \n",
+       "2019-01-11 15:08:05.600  0.001333  0.971667 -0.064333  2.5608 -0.2560 -1.4146   \n",
+       "2019-01-11 15:08:05.800 -0.024000  0.957000 -0.073500  8.0610 -4.5244 -2.0730   \n",
+       "2019-01-11 15:08:06.000 -0.028000  0.957667 -0.115000  2.4390 -1.5486 -3.6098   \n",
+       "...                           ...       ...       ...     ...     ...     ...   \n",
+       "2019-01-20 17:33:27.000 -0.048000 -1.041500 -0.076500  1.4146 -5.6218  0.2926   \n",
+       "2019-01-20 17:33:27.200 -0.037000 -1.030333 -0.053333 -2.7684 -0.5854  2.2440   \n",
+       "2019-01-20 17:33:27.400 -0.060000 -1.031000 -0.082000  2.8416 -5.1342 -0.1220   \n",
+       "2019-01-20 17:33:27.600 -0.038667 -1.025667 -0.044667 -0.2318  0.2562  1.1220   \n",
+       "2019-01-20 17:33:27.800 -0.044000 -1.034000 -0.059000  1.0980 -4.0240  0.9760   \n",
+       "\n",
+       "                        Participant  label category  set  gyro_z_outlier  \n",
+       "epoch (ms)                                                                \n",
+       "2019-01-11 15:08:05.200           B  bench    heavy   30           False  \n",
+       "2019-01-11 15:08:05.400           B  bench    heavy   30           False  \n",
+       "2019-01-11 15:08:05.600           B  bench    heavy   30           False  \n",
+       "2019-01-11 15:08:05.800           B  bench    heavy   30           False  \n",
+       "2019-01-11 15:08:06.000           B  bench    heavy   30           False  \n",
+       "...                             ...    ...      ...  ...             ...  \n",
+       "2019-01-20 17:33:27.000           E    row   medium   90           False  \n",
+       "2019-01-20 17:33:27.200           E    row   medium   90           False  \n",
+       "2019-01-20 17:33:27.400           E    row   medium   90           False  \n",
+       "2019-01-20 17:33:27.600           E    row   medium   90           False  \n",
+       "2019-01-20 17:33:27.800           E    row   medium   90           False  \n",
+       "\n",
+       "[9009 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
